# reqwest-hickory-resolver

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
src/: lib.rs
