[package]
name = "reqwest-hickory-resolver"
version = "0.4.0"

categories = ["command-line-utilities"]
description = "hickory resolver support for reqwest"
documentation = "https://docs.rs/reqwest-hickory-resolver"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/Xuanwo/reqwest-hickory-resolver"
rust-version = "1.85"

[dependencies]
hickory-resolver = { version = "0.26.1" }
rand = { version = "0.10.1", default-features = false, features = ["sys_rng"] }
reqwest = { version = "0.13", default-features = false }

[dev-dependencies]
tokio = { version = "1.52.2", features = ["full"] }